force-app/main/default/objects/Territory_Stage__c/Territory_Stage__c.object-meta.xml
<CustomObject>
    <label>Territory2 Stage</label>
    <nameField>
        <label>Territory2 Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory2 Stage</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>