force-app/main/default/objects/Territory_Stage__c/fields/AdaptiveId__c.field-meta.xml
<CustomField>
    <fullName>AdaptiveId__c</fullName>
    <externalId>true</externalId>
    <label>Adaptive Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>