force-app/main/default/objects/Territory_Stage__c/fields/Hierarchy_Level__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Level__c</fullName>
    <formula>IF(OR(ISPICKVAL(Type__c, &apos;Theatre&apos;),ISPICKVAL(Type__c, &apos;Theater&apos;)),&apos;1&apos;,
IF(ISPICKVAL(Type__c, &apos;Area&apos;),&apos;2&apos;,IF(ISPICKVAL(Type__c, &apos;Region&apos;),&apos;3&apos;,IF(ISPICKVAL(Type__c, &apos;Territory&apos;),&apos;4&apos;,&apos;NA&apos;) ) ) )</formula>
    <label>Hierarchy Level</label>
    <type>Text</type>
</CustomField>