force-app/main/default/objects/Territory_Stage__c/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <label>JobId</label>
    <referenceTo>ETMStage_Monitoring__c</referenceTo>
    <relationshipLabel>Territory2 Stage</relationshipLabel>
    <relationshipName>Territory2_Stage</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>