force-app/main/default/objects/Territory_Stage__c/fields/Parent_Adaptive_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Adaptive_Id__c</fullName>
    <label>Parent Adaptive Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>