force-app/main/default/objects/Territory_Stage__c/fields/SQL_Operation__c.field-meta.xml
<CustomField>
    <fullName>SQL_Operation__c</fullName>
    <label>SQL Operation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>