force-app/main/default/objects/Territory_Stage__c/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <description>Captures the sbtype of territory (Field sales,Channel)</description>
    <label>SubType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Field Sales</fullName>
                <label>FIeld Sales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>