force-app/main/default/objects/Territory_Stage__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Specifies territory type .
Allowed values = Theatre ,Area,Region,Territory (TART)</description>
    <label>Territory Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Area</fullName>
            </value>
            <value>
                <fullName>Region</fullName>
            </value>
            <value>
                <fullName>Territory</fullName>
            </value>
            <value>
                <fullName>Theatre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>