force-app/main/default/objects/Territory_Stage__c/validationRules/Prevent_Territory_Stage_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Territory_Stage_Creation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.ShGl_DisableFunctionalityLogic__c.ETM_Manage_Territory_Stage__c),
$Profile.Name = &quot;Sales Operations&quot;
)</errorConditionFormula>
    <errorMessage>You do not have access to manage Territory2 Stage records. Please contact System Admin or David Lee from SalesOps.</errorMessage>
</ValidationRule>